Fix collapse node cell text editor field.

--- a/ui/dom-explorer.reel/create-node-cell.reel/create-node-cell.css
+++ b/ui/dom-explorer.reel/create-node-cell.reel/create-node-cell.css
@@ -110,7 +110,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    min-width: 20px;
+    min-width: 45px;
 }
 
 .CreateNodeCell-reset.matte-Button {
